--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,29 @@ db.sqlite3
 __pycache__
 *.pyc
 qanda/migrations
+
+.idea/.name
+
+*.ids
+
+*.xml
+
+*.iml
+
+functional_tests/__init__.py
+
+qanda/static/bootstrap/js/bootstrap.min.js
+
+qanda/static/bootstrap/css/bootstrap.min.css
+
+qanda/static/bootstrap/css/bootstrap.css
+
+*.jpg
+
+qanda/static/js/bootstrap.min.js
+
+qanda/static/js/jquery.dropotron.min.js
+
+qanda/static/js/jquery.js
+
+qanda/static/js/jquery.min.js
