Add a fabfile for automated deploys

--- a/deploy_tools/gunicorn-upstart.template.conf
+++ b/deploy_tools/gunicorn-upstart.template.conf
@@ -9,5 +9,4 @@ setuid ubuntu
 chdir /home/ubuntu/sites/SITENAME/source
 
 exec ../virtualenv/bin/gunicorn \
-	--bind unix:/tmp/SITENAME.socket
-	qbank.wsgi:application
+	--bind unix:/tmp/SITENAME.socket qbank.wsgi:application
